--- a/app/src/main/res/drawable/high_score_rounded_corner.xml
+++ b/app/src/main/res/drawable/high_score_rounded_corner.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
     <shape xmlns:android="http://schemas.android.com/apk/res/android" >
         <stroke
-            android:width="4dp"
+            android:width="1dp"
             android:color="#ffffff" />
         <solid android:color="#ffffff" />
-        <corners android:radius="25dp" />
+        <corners android:bottomLeftRadius="25dp"  android:bottomRightRadius="25dp"/>
     </shape>
 
 
